--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "eslint": "^8.33.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "jest": "^29.4.1"
   },
   "bin": {
