--- a/.github/workflows/github-check.yml
+++ b/.github/workflows/github-check.yml
@@ -21,12 +21,12 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm install
         run: |
-          make install
+          npm ci
         env:
           CI: true
       - name: Run Linter
         run: |
-          make lint
+          npx eslint .
       - name: Run Tests
         run: |
           npm test
