--- a/.eslintignore
+++ b/.eslintignore
@@ -4,3 +4,6 @@ bin/gendiff.js
 src/parsers/parsing.js
 src/compare.js
 src/formatting/stylish.js
+src/formatters/index.js
+src/formatters/plain.js
+src/formatters/stylish.js
